import { getTemplateConfig } from "../createAsync";

const ALL_TARGET_TYPES = [
  "action",
  "app-intent",
  "widget",
  "watch",
  "watch-widget",
  "clip",
  "safari",
  "share",
  "notification-content",
  "notification-service",
  "intent",
  "intent-ui",
  "spotlight",
  "bg-download",
  "quicklook-thumbnail",
  "location-push",
  "credentials-provider",
  "account-auth",
  "device-activity-monitor",
  "device-activity-report",
  "file-provider",
  "broadcast-upload",
  "call-directory",
  "message-filter",
  "file-provider-ui",
  "broadcast-setup-ui",
  "classkit-context",
  "unwanted-communication",
  "photo-editing",
  "quicklook-preview",
  "spotlight-delegate",
  "virtual-conference",
  "shield-action",
  "shield-config",
  "print-service",
  "smart-card",
  "authentication-services",
  "wallet",
  "wallet-ui",
];

describe(getTemplateConfig, () => {
  ALL_TARGET_TYPES.map((target) => {
    it(`should return a valid template for ${target}`, () => {
      const config = getTemplateConfig(target);
      expect(config).toMatchSnapshot();

      // Eval the config to ensure it's valid JS
      // eslint-disable-next-line no-eval
      const configFunction = eval(config);
      expect(configFunction instanceof Function).toBe(true);
      const result = configFunction({});
      // Expect result to be a serializable object
      expect(result).toBeInstanceOf(Object);
      expect(() => JSON.stringify(result)).not.toThrow();
    });
  });
});
